--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "eslint-config-next": "15.4.6",
     "postcss": "^8.4.47",
     "tailwindcss": "4.1.11",
     "typescript": "^5"
