--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "html2canvas": "^1.4.1",
     "next": "15.4.6",
+    "posthog-js": "^1.259.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
